fix img padding on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -859,7 +859,6 @@ img:not([src]) {
 
   .web-clip .image {
     width: 100%;
-    padding-top: 60.7708% !important;
     margin-bottom: 5px;
   }
 
